# edgedetection

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detector.cpp
app/src/main/java/com/example/edgedetection/: CameraManager.kt  EdgeDetectionRenderer.kt  MainActivity.kt  NativeBridge.kt  ShaderProgram.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
